# stock-backtester

./: .gitignore
backend/: pyproject.toml
backend/app/: main.py
backend/app/config/: config.py  dependecies.py  security.py
backend/app/core/: dependecies.py  security.py
backend/app/db/: database.py  enums.py
backend/app/db/models/: __init__.py  equity.py  price.py  relation_stock_equity.py  strategy.py  trade.py  user.py
backend/app/repositories/: equity_repository.py  strategy_repository.py  user_repository.py
backend/app/routes/: equity_routes.py  strategy_routes.py  user_routes.py
backend/app/schemas/: equity_schema.py  index_schema.py  strategy_schema.py  user_schema.py
backend/app/utils/: sliding_window_util.py  yfinance_util.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/admin/: admin-login.tsx  anomaly-trading-setup.tsx  page.tsx
frontend/components/auth/: verify-admin.tsx
frontend/components/table/: table.tsx
frontend/constants/: market-constants.ts  strategies.ts
frontend/store/: admin-store.ts
frontend/utils/api/: api.ts
frontend/utils/config/: config.ts
research/anomaly-trading/: 01_fetch_data.ipynb  02_scanner.ipynb  03_output.ipynb  04_stock_selection.ipynb  05_news (1).ipynb  main.py  pyproject.toml
